<resources>
    <string name="app_name">APPQuiz</string>
    <string name="title_activity_resumen">Inicio</string>
    <string name="action_settings">Acerca de</string>
    <string name="title_activity_acercade">Acerca de</string>
    <string name="title_activity_listado_preguntas">Listado de Preguntas</string>
    <string name="title_activity_nueva_pregunta">Nueva Pregunta</string>
    <string name="appQuiz_AcercaDe">APPQuiz</string>
    <string name="creadoPor_AcercaDe">Creado por: Rafael Yuste Jiménez</string>
    <string name="version_AcercaDe">Versión: 1.0</string>
    <string name="eMail_AcercaDe">Correo de contacto: teka_ryj@hotmail.com</string>
    <string name="derechos_AcercaDe">© 2018 Android Studio. Todos los derechos reservados.</string>
    <string name="noPreguntasCreadas">No hay preguntas creadas.</string>
    <string name="enunciado">Enunciado de la pregunta</string>
    <string name="guardar">Guardar</string>
    <string name="correcta">Respuesta correcta</string>
    <string name="incorrecta_1">Respuesta incorrecta 1</string>
    <string name="incorrecta_2">Respuesta incorrecta 2</string>
    <string name="incorrecta_3">Respuesta incorrecta 3</string>
    <string name="categoria">Categoría: </string>
    <string name="nuevaCategoria">Nueva categoría</string>
    <string name="error_guardarCategoria">Error al guardar la categoría.</string>
    <string name="perEscAcep">Permisos de escritura aceptados.</string>
    <string name="perEscDene">Permisos de escritura denegados.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_editarPregunta">Editar Pregunta</string>
    <string name="rellenarCamposGuardar">Rellena todos los campos para Guardar.</string>
    <string name="actualizarPregunta_exito">Pregunta actualizada con éxito.</string>
    <string name="actualizarPregunta_error">Error al actualizar la pregunta.</string>
    <string name="guardarPregunta_exito">Pregunta guardada con éxito.</string>
    <string name="guardarPregunta_error">Error al guardar la pregunta.</string>
    <string name="borrarListado">Borrar Listado</string>
    <string name="eliminarPregunta_exito">Pregunta eliminada con éxito.</string>
    <string name="eliminarPregunta_error">Error al eliminar la pregunta.</string>
    <string name="conectado">Conectado a Internet</string>
    <string name="desconectado">No tienes conexión a Internet</string>
    <string name="prgDisponibles">Preguntas disponibles:</string>
    <string name="catgDisponibles">Categorías disponibles:</string>
    <string name="animIniciar">INICIAR</string>
    <string name="animDetener">DETENER</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="eliminarListado">¿Deseas eliminar el listado de preguntas?</string>
    <string name="exportarListado">Exportar Listado</string>
    <string name="msgPreguntasExp">Listado de Preguntas Exportadas</string>
    <string name="msgPreguntasExpApp">Listado de preguntas de APPQuiz.</string>
</resources>
